# HomeworkM20

./: CMakeLists.txt
M20client/: CMakeLists.txt
M20client/src/: User.cpp  main.cpp  myChat.cpp  myChat.h  myClient.h
src/: User.cpp  User.h  main.cpp  myChat.cpp  myChat.h  myFunctions.h  myServer.h  persons.txt
